glFusion ChangeLog

v1.1.0
------------
- Implemented glFusion CSS layout driven header / footer functions.
        public_html/lib-common.php
        public_html/layout/nouveau/functions.php
        public_html/layout/professional/functions.php

- Bumped version number to 1.1.0svn
        public_html/lib-common.php

v1.0.1
------------
- Allow creation of banned users, i.e. ban the user on account creation
        public_html/admin/users.php

- Minor improvements in the error handling
        public_html/lib-common.php

- Fixed issue where menu option Graphics or color was not being honored
  in Nouveau theme.
        public_html/layout/nouveau/functions.php

- Added theme name to instance id for cached stories.
        private/system/lib-story.php

- If admin creates a user, use the user status (active, awaiting approval)
  specified by admin during the create.
        public_html/admin/user.php

- Made the default advanced editor style more closely match the Nouveau theme (Eric)
		public_html/fckeditor/fckconfig.js

- Added the gl_moochronometer css (Eric)
		public_html/layout/nouveau/style.css

- Added a title to the (X) option
        private/language/english.php
        private/language/english_utf-8.php
        private/system/classes/config.class.php

- Hide the database password when the database backup failed and we're logging
  the mysqldump command
        public_html/admin/database.php

- E_ALL fix + CUSTOM_loginErrorHandler isn't supposed to return anything
        public_html/users.php

- Hebrew language file update
        private/language/hebrew_utf-8.php

- Fixed issue where global array was not properly defined for plugins
        private/plugins/calendar/install_defaults.php
        private/links/calendar/install_defaults.php
        private/polls/calendar/install_defaults.php
        private/spamx/calendar/install_defaults.php
        private/staticpages/calendar/install_defaults.php
